--- a/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
+++ b/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
@@ -37,7 +37,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Of-o4-vt6">
-                    <rect key="frame" x="24" y="149" width="342" height="98"/>
+                    <rect key="frame" x="24" y="268" width="342" height="98"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2g-88-EEw">
                             <rect key="frame" x="98" y="49" width="232" height="0.0"/>
@@ -54,14 +54,14 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dh-y5-8RN">
-                    <rect key="frame" x="157.33333333333334" y="91" width="28" height="28"/>
+                    <rect key="frame" x="157.33333333333334" y="-28" width="28" height="266"/>
                     <state key="normal" image="challengeHelpButton"/>
                     <connections>
                         <action selector="touchHelp:" destination="iN0-l3-epB" eventType="touchUpInside" id="Mma-Mc-lE9"/>
                     </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BV7-E8-JT9">
-                    <rect key="frame" x="24" y="123.33333333333331" width="90" height="123.66666666666669"/>
+                    <rect key="frame" x="24" y="242.33333333333334" width="90" height="123.66666666666666"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="90" id="TgE-kn-eIu"/>
                         <constraint firstAttribute="width" secondItem="BV7-E8-JT9" secondAttribute="height" multiplier="80:110" id="uch-V9-52E"/>
@@ -75,7 +75,7 @@
                     <state key="normal" image="scrollDownIcn"/>
                 </button>
                 <view contentMode="scaleToFill" verticalHuggingPriority="270" verticalCompressionResistancePriority="27" translatesAutoresizingMaskIntoConstraints="NO" id="Tk3-Ar-b0Y">
-                    <rect key="frame" x="24" y="267" width="342" height="517"/>
+                    <rect key="frame" x="24" y="386" width="342" height="398"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sw0-eU-8jJ">
                             <rect key="frame" x="139.33333333333334" y="28" width="63.666666666666657" height="24"/>
@@ -106,7 +106,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="27E-xI-eMe">
-                            <rect key="frame" x="48.666666666666686" y="447" width="245" height="15.666666666666686"/>
+                            <rect key="frame" x="48.666666666666686" y="328" width="245" height="15.666666666666686"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘의 챌린지를 성공하면 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hC-pz-UFf">
                                     <rect key="frame" x="0.0" y="0.0" width="129.66666666666666" height="15.666666666666666"/>
@@ -134,11 +134,17 @@
                                 <constraint firstAttribute="height" constant="15.666666666666686" id="gfj-G7-Hnm"/>
                             </constraints>
                         </stackView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="challengeCompleteEffect" translatesAutoresizingMaskIntoConstraints="NO" id="vcw-f0-6UZ">
+                            <rect key="frame" x="32.666666666666657" y="133.66666666666663" width="276.66666666666674" height="160.66666666666663"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="vcw-f0-6UZ" secondAttribute="height" multiplier="272:158" id="HuP-oZ-BgR"/>
+                            </constraints>
+                        </imageView>
                         <view contentMode="scaleToFill" horizontalCompressionResistancePriority="720" verticalCompressionResistancePriority="720" translatesAutoresizingMaskIntoConstraints="NO" id="dFr-OB-I9c">
-                            <rect key="frame" x="60" y="141" width="222" height="265"/>
+                            <rect key="frame" x="60" y="141" width="222" height="146"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="stampSkeleton" translatesAutoresizingMaskIntoConstraints="NO" id="ZCr-7b-eZA">
-                                    <rect key="frame" x="0.0" y="-13.333333333333314" width="222" height="291.66666666666669"/>
+                                    <rect key="frame" x="0.0" y="-7.3333333333333712" width="222" height="160.66666666666666"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -150,7 +156,7 @@
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35C-2X-fX0">
-                            <rect key="frame" x="106" y="470.66666666666663" width="130" height="15.333333333333314"/>
+                            <rect key="frame" x="106" y="351.66666666666663" width="130" height="15.333333333333314"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="획득 가능한 뱃지는 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zuq-pt-F85">
                                     <rect key="frame" x="0.0" y="0.0" width="96.666666666666671" height="15.333333333333334"/>
@@ -182,6 +188,8 @@
                         <constraint firstItem="Sw0-eU-8jJ" firstAttribute="centerX" secondItem="Tk3-Ar-b0Y" secondAttribute="centerX" id="5zR-ov-74C"/>
                         <constraint firstItem="yCh-eY-nvn" firstAttribute="top" secondItem="Sw0-eU-8jJ" secondAttribute="bottom" constant="20" id="AKY-9K-45u"/>
                         <constraint firstItem="dFr-OB-I9c" firstAttribute="top" secondItem="yCh-eY-nvn" secondAttribute="bottom" constant="44" id="CQr-n9-ZrP"/>
+                        <constraint firstItem="vcw-f0-6UZ" firstAttribute="top" secondItem="ZCr-7b-eZA" secondAttribute="top" id="Lug-ri-nuj"/>
+                        <constraint firstItem="vcw-f0-6UZ" firstAttribute="height" secondItem="ZCr-7b-eZA" secondAttribute="height" id="Wab-n5-yXa"/>
                         <constraint firstAttribute="trailing" secondItem="dFr-OB-I9c" secondAttribute="trailing" constant="60" id="b2r-sN-Hds"/>
                         <constraint firstItem="27E-xI-eMe" firstAttribute="top" secondItem="dFr-OB-I9c" secondAttribute="bottom" constant="41" id="bAT-rr-hIR"/>
                         <constraint firstItem="Sw0-eU-8jJ" firstAttribute="top" secondItem="Tk3-Ar-b0Y" secondAttribute="top" constant="28" id="dox-Td-jTm"/>
@@ -212,6 +220,7 @@
                 <constraint firstItem="BV7-E8-JT9" firstAttribute="bottom" secondItem="1Of-o4-vt6" secondAttribute="bottom" id="gZp-Q7-hi6"/>
                 <constraint firstItem="Tk3-Ar-b0Y" firstAttribute="top" secondItem="1Of-o4-vt6" secondAttribute="bottom" constant="20" id="j4A-1r-Q4J"/>
                 <constraint firstItem="TFX-Dy-UWZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="pS3-Kp-mLS"/>
+                <constraint firstItem="vcw-f0-6UZ" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="tn2-hm-tO8"/>
                 <constraint firstItem="5dh-y5-8RN" firstAttribute="leading" secondItem="TFX-Dy-UWZ" secondAttribute="trailing" id="vOL-Mg-j0b"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -222,6 +231,7 @@
                 <outlet property="characterImageView" destination="BV7-E8-JT9" id="QCx-hx-Roz"/>
                 <outlet property="characterLineLabel" destination="H2g-88-EEw" id="Yoo-gv-gUO"/>
                 <outlet property="characterLineView" destination="1Of-o4-vt6" id="V6R-eg-QbR"/>
+                <outlet property="completeEffectImageView" destination="vcw-f0-6UZ" id="HFg-3c-sx4"/>
                 <outlet property="dayLabel" destination="TRQ-Vn-owg" id="xDI-Yo-5Pt"/>
                 <outlet property="dayLabelView" destination="Sw0-eU-8jJ" id="u12-Vk-BR4"/>
                 <outlet property="stampBgView" destination="Tk3-Ar-b0Y" id="7jj-AU-UCH"/>
@@ -231,6 +241,7 @@
         </view>
     </objects>
     <resources>
+        <image name="challengeCompleteEffect" width="275.33334350585938" height="160.66667175292969"/>
         <image name="challengeHelpButton" width="28" height="28"/>
         <image name="scrollDownIcn" width="31.333333969116211" height="19.333333969116211"/>
         <image name="stampSkeleton" width="160" height="160"/>
