--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/Login.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/Login.storyboard
@@ -9,6 +9,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Login View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -19,33 +24,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="6Os-uS-eQv">
-                                <rect key="frame" x="113.33333333333333" y="711" width="148.33333333333337" height="11"/>
+                                <rect key="frame" x="110.66666666666669" y="711" width="154" height="11"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이미 계정이 있나요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wV-JM-dXV">
-                                        <rect key="frame" x="0.0" y="0.0" width="80.333333333333329" height="11"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="83" height="11"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="11" id="xJh-C9-u0u"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="10"/>
+                                        <color key="textColor" name="Black"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uks-BU-gX2">
-                                        <rect key="frame" x="84.333333333333329" y="0.0" width="63.999999999999986" height="11"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uks-BU-gX2">
+                                        <rect key="frame" x="86.999999999999986" y="0.0" width="67.000000000000014" height="11"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="11" id="KNs-Aq-vHB"/>
                                         </constraints>
-                                        <state key="normal">
-                                            <attributedString key="attributedTitle">
-                                                <fragment content="이메일로 로그인">
-                                                    <attributes>
-                                                        <color key="NSColor" systemColor="systemYellowColor"/>
-                                                        <font key="NSFont" metaFont="system" size="10"/>
-                                                        <integer key="NSUnderline" value="1"/>
-                                                    </attributes>
-                                                </fragment>
-                                            </attributedString>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="10"/>
+                                        <state key="normal" title="이메일로 로그인">
+                                            <color key="titleColor" name="Yellow3"/>
                                         </state>
                                         <connections>
                                             <action selector="touchEmailLoginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="PK3-Uk-Z2P"/>
@@ -62,10 +60,10 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="sLf-bc-9cr"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <inset key="imageEdgeInsets" minX="-12" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="카카오로 시작하기" image="kakaoIcon">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleColor" name="Black"/>
                                         </state>
                                         <connections>
                                             <action selector="touchKakaoLoginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7u7-HO-maK"/>
@@ -77,7 +75,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="vrc-yS-qoZ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <inset key="imageEdgeInsets" minX="-12" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="Apple로 시작하기" image="appleIcon">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -99,10 +97,10 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="bYD-Ij-WkT"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <inset key="imageEdgeInsets" minX="-12" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <state key="normal" title="이메일로 시작하기" image="messageIcon">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleColor" name="Black"/>
                                         </state>
                                         <connections>
                                             <action selector="touchSignEmailButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="UM0-Tu-9kd"/>
@@ -125,16 +123,23 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모행에 온 것을 환영해!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rM6-Cx-uyl">
                                 <rect key="frame" x="112.33333333333333" y="291" width="150.33333333333337" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="Black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soleImage" translatesAutoresizingMaskIntoConstraints="NO" id="D8X-kB-ZFk">
-                                <rect key="frame" x="239" y="220" width="39" height="50.000000000000028"/>
+                                <rect key="frame" x="239" y="219.33333333333334" width="39" height="50.000000000000028"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ooh-E8-4Yt"/>
                                     <constraint firstAttribute="width" constant="39" id="WTj-p1-m0c"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nQS-Ex-SIs">
+                                <rect key="frame" x="197.66666666666666" y="721" width="66.999999999999972" height="1"/>
+                                <color key="backgroundColor" name="Yellow3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="SR4-P2-44W"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -145,12 +150,15 @@
                             <constraint firstItem="JAC-d7-iEM" firstAttribute="top" secondItem="D8X-kB-ZFk" secondAttribute="bottom" constant="-14" id="Bpm-wr-9s2"/>
                             <constraint firstItem="Kch-49-QkD" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="CjP-8g-Wd2"/>
                             <constraint firstItem="fXW-Co-4M0" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="FTp-84-gXe"/>
+                            <constraint firstItem="nQS-Ex-SIs" firstAttribute="trailing" secondItem="uks-BU-gX2" secondAttribute="trailing" id="H6k-tU-Czw"/>
                             <constraint firstItem="rM6-Cx-uyl" firstAttribute="top" secondItem="JAC-d7-iEM" secondAttribute="bottom" constant="7" id="Iii-re-d4f"/>
                             <constraint firstItem="JAC-d7-iEM" firstAttribute="centerX" secondItem="Kch-49-QkD" secondAttribute="centerX" id="NFB-T2-A80"/>
                             <constraint firstItem="6Os-uS-eQv" firstAttribute="top" secondItem="fXW-Co-4M0" secondAttribute="bottom" constant="24" id="ZGM-zx-eYM"/>
                             <constraint firstItem="Kch-49-QkD" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="aF5-HH-0xb"/>
                             <constraint firstItem="fXW-Co-4M0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="c9p-8n-g4O"/>
                             <constraint firstItem="D8X-kB-ZFk" firstAttribute="leading" secondItem="JAC-d7-iEM" secondAttribute="trailing" constant="-8.6666666666666856" id="cfU-Fk-ieu"/>
+                            <constraint firstItem="nQS-Ex-SIs" firstAttribute="bottom" secondItem="uks-BU-gX2" secondAttribute="bottom" id="nx9-FE-Gn7"/>
+                            <constraint firstItem="nQS-Ex-SIs" firstAttribute="leading" secondItem="uks-BU-gX2" secondAttribute="leading" id="ojT-wN-M0m"/>
                             <constraint firstItem="rM6-Cx-uyl" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="tJs-6W-M7R"/>
                             <constraint firstItem="6Os-uS-eQv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="vw3-cF-Gzk"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="6Os-uS-eQv" secondAttribute="bottom" constant="56" id="wJB-Pv-D1s"/>
@@ -196,14 +204,17 @@
         <image name="kakaoIcon" width="20" height="20"/>
         <image name="messageIcon" width="20" height="20"/>
         <image name="soleImage" width="39" height="50"/>
+        <namedColor name="Black">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Grey5">
             <color red="0.91399997472763062" green="0.91399997472763062" blue="0.91399997472763062" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="Yellow3">
+            <color red="1" green="0.77999997138977051" blue="0.3529999852180481" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
