--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
@@ -8,6 +8,17 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Medium.otf">
+            <string>SpoqaHanSansNeo-Medium</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Sign Up Third View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -18,55 +29,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07g-md-OcR">
-                                <rect key="frame" x="24" y="82" width="100" height="26.333333333333329"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <rect key="frame" x="23.999999999999993" y="82" width="106.33333333333331" height="27.666666666666671"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nickNameImage" translatesAutoresizingMaskIntoConstraints="NO" id="rSm-lZ-pqn">
-                                <rect key="frame" x="87.666666666666686" y="132.33333333333334" width="200" height="200.00000000000003"/>
+                                <rect key="frame" x="87.666666666666686" y="133.66666666666666" width="200" height="199.99999999999997"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="HJr-B2-Sqj"/>
                                     <constraint firstAttribute="width" constant="200" id="Lda-VN-bca"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="닉네임 입력(한글 6자 이내)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8vR-cA-ldV">
-
-                                <rect key="frame" x="24" y="370.33333333333331" width="327" height="18.666666666666686"/>
-                             
-
+                                <rect key="frame" x="24" y="397.66666666666669" width="327" height="19.333333333333314"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KnW-qp-7rg">
-
-                                <rect key="frame" x="24" y="397" width="327" height="1"/>
-
+                                <rect key="frame" x="24" y="425" width="327" height="1"/>
                                 <color key="backgroundColor" name="Grey3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="FSD-b2-UwM"/>
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사용 불가능한 닉네임입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fH8-vg-Zu1">
-
-                                <rect key="frame" x="241.33333333333334" y="410" width="109.66666666666666" height="12"/>
-
-
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <rect key="frame" x="236" y="438" width="115" height="12.666666666666686"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="10"/>
                                 <color key="textColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2H-8P-CbD">
-
-                                <rect key="frame" x="24" y="445.66666666666669" width="327" height="40"/>
-
-
+                                <rect key="frame" x="24" y="473.66666666666669" width="327" height="40.000000000000057"/>
                                 <color key="backgroundColor" name="DeepYellow"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="wcF-gd-1y5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="16"/>
                                 <state key="normal" title="닉네임 설정하기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -75,8 +75,8 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임은 한글 6자 이내로 입력해주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fpe-hR-aMG">
-                                <rect key="frame" x="107.66666666666669" y="339.33333333333331" width="160" height="12"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <rect key="frame" x="105" y="345.66666666666669" width="165" height="12.666666666666686"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Medium" family="Spoqa Han Sans Neo" pointSize="10"/>
                                 <color key="textColor" name="Grey4"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -90,9 +90,7 @@
                             <constraint firstItem="KnW-qp-7rg" firstAttribute="top" secondItem="8vR-cA-ldV" secondAttribute="bottom" constant="8" id="F7B-Xa-POU"/>
                             <constraint firstItem="rSm-lZ-pqn" firstAttribute="top" secondItem="07g-md-OcR" secondAttribute="bottom" constant="24" id="RXu-Bg-W0n"/>
                             <constraint firstItem="fH8-vg-Zu1" firstAttribute="top" secondItem="KnW-qp-7rg" secondAttribute="bottom" constant="12" id="V7c-fD-Zmi"/>
-
                             <constraint firstItem="a2H-8P-CbD" firstAttribute="top" secondItem="KnW-qp-7rg" secondAttribute="bottom" constant="47.659999999999997" id="YwO-Uy-B8n"/>
-
                             <constraint firstItem="a2H-8P-CbD" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="ca0-LA-zMa"/>
                             <constraint firstItem="rSm-lZ-pqn" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="d0d-mN-Rya"/>
                             <constraint firstItem="8vR-cA-ldV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="iHR-oS-b35"/>
